welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  var lenght = nums.lenght
  for (i <- 0 to lenght-1) {
    if (nums(i) == lookingFor)
    	return i
  }
  return -1
}